--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Griglia Campo Minato</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <header>
+        <div class="d-flex justify-content-between mt-3 px-3">
+            <span class="font-size-30 fw-semibold "><img src="./img/Logo.png" alt="Logo">Campo Minato</span>
+            <button id="btn" class="btn btn-success text-white text-uppercase">inizia</button>
+        </div>
+    </header>
+    <main>
+    </main>
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
