--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         </div>
     </header>
     <main>
+        <div class="d-flex justify-content-center py-5">
+            <div id="grid">
+            </div>
+        </div>
     </main>
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
